--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -1,4 +1,10 @@
-
+{% if request.user.is_authenticated %}
+    <p>{{ request.user }}</p>
+    <a href="{% url 'logout' %}">Logout</a>
+{% else %}
+    <a href="{% url 'login' %}">Log In</a>
+{% endif %}
+<hr>
 <h1> My ToDo List</h1>
 <a href="{% url 'task-create'%}">Add Task</a>
 
@@ -6,11 +12,15 @@
     <tr>
         <th>Item</th>
         <th></th>
+        <th></th>
+        <th></th>
     </tr>
     {% for task in tasks %}
         <tr>
             <td>{{ task.title }}</td>
             <td><a href="{% url 'task' task.id %}">View</a></td>
+            <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
+            <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
         </tr>
     {% empty %}
     <h3>No Item in list</h3>
